# Software_Renderer_SDL3

./: .gitignore  CMakeLists.ios.cmake  CMakeLists.linux.cmake  CMakeLists.macos.cmake  CMakeLists.txt  CMakeLists.windows.cmake  README.md  copy-dlls.ps1  setup-ios.sh  setup.ps1  setup.sh  setup_ios.sh  setup_linux.sh  setup_macos.sh
.github/workflows/: build.yml
Part_00_init_SDL3/: CMakeLists.txt  main.cpp
Part_01_window/: CMakeLists.txt  main.cpp
Part_02_vk_instance/: CMakeLists.txt  README.md  main.cpp
